# python-pypiapi

./: .flake8  .gitignore  README.md  pypi.org.py  pyproject.toml  setup.cfg
.github/workflows/: bandit.yaml
pypiapi/: __init__.py  __main__.py  exceptions.py  licenses.py  listing.py  logger.py  packages.py  sockethelpers.py
