[build-system]
requires = ["flit_core >=3.5.1,<4", "setuptools>=45", "wheel"]
build-backend = "flit_core.buildapi"

[project]
name = "pypiapi"
dynamic = ["version"]
description = "Python library to interact with the pypi.org simple API defined in PEP-503."
authors = [
    {name = "Anton Hvornum", email = "anton@hvornum.se"},
]
readme = "README.md"
requires-python = ">=3.10"

keywords = ["python", "pip", "pypiapi", "offline", "sync"]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Home = "https://github.com/Torxed/python-pypiapi"
Documentation = "https://pypiapi.readthedocs.io/"
Source = "https://github.com/Torxed/python-pypiapi"

[project.scripts]
pypiapi = "offline:main"

[project.optional-dependencies]
doc = ["sphinx"]

[tool.flit.sdist]
exclude = ["tests/"]
include = ["docs/", "pypiapi"]

[tool.mypy]
python_version = "3.10"
exclude = [
    "tests/",
]
follow_imports = "skip"
check_untyped_defs = true
strict = true